import parser.JSONParser;

public class DataSource <T> {
	public T getInstance(String name, JSONParser type) {
		return null;
	}
	public void save(String name, JSONParser type) {
		
	}
}
