@startuml

title __TODO-CLI's Class Diagram__\n

  namespace cli {
    class cli.CLI {
    }
  }
  

  namespace cli {
    enum CLIAction {
    }
  }
  

  namespace cli {
    class cli.CLIEvent {
    }
  }
  

  namespace cli {
    class cli.CLIEventHandler {
    }
  }
  

  namespace cli {
    class cli.CustomDebugger {
    }
  }
  

  namespace cli {
    class cli.Setup {
    }
  }
  

  namespace command {
    abstract class command.Command {
    }
  }
  

  namespace command {
    class command.HelloWorldCmd {
    }
  }
  

  namespace parser {
    interface parser.JSONParser {
    }
  }
  

  namespace parser {
    class parser.ListParser {
    }
  }
  

  namespace parser {
    class parser.TaskParser {
    }
  }
  

  namespace repository {
    class repository.Comment {
    }
  }
  

  namespace repository {
    class repository.DataSource {
    }
  }
  

  namespace repository {
    interface repository.Repository {
    }
  }
  

  namespace repository {
    abstract class repository.Task {
    }
  }
  

  namespace repository {
    abstract class repository.TaskList {
    }
  }
  

  namespace repository {
    class repository.TaskListTXT {
    }
  }
  

  namespace repository {
    class repository.TaskTXT {
    }
  }
  

  cli.CLI o-- cli.CLIEventHandler : eventManager
  cli.CLIEvent -up-|> java.awt.event.ActionEvent
  cli.CLIEventHandler .up.|> java.awt.event.ActionListener
  command.HelloWorldCmd -up-|> command.Command
  parser.ListParser .up.|> parser.JSONParser
  parser.TaskParser .up.|> parser.JSONParser
  repository.Task .up.|> repository.Repository
  repository.TaskList .up.|> repository.Repository
  repository.TaskListTXT -up-|> repository.TaskList
  repository.TaskTXT -up-|> repository.Task


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
